--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "noEmit": true,
-        "module": "es2022",
-        "target": "es2022",
+        "module": "esnext",
+        "target": "esnext",
         "allowJs": true,
         "moduleResolution": "bundler",
         "sourceMap": true,
