--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nieuwskaart",
+  "name": "nieuwskaart",
   "description": "Nieuwskaart met recent gepubliceerde artikelen uit Nimbus",
   "author": "Remy Glaser <rglaser@gld.nl>",
   "type": "module",
@@ -30,9 +30,11 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/js": "^9.18.0",
     "@popperjs/core": "^2.11.8",
     "@types/bootstrap": "^5.2.10",
     "@types/leaflet": "^1.9.16",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@types/webpack-env": "^1.18.5",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
@@ -40,9 +42,11 @@
     "bootstrap-icons": "^1.11.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.18.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "mini-css-extract-plugin": "^2.9.2",
     "popper.js": "^1.16.1",
     "postcss-loader": "^8.1.1",
@@ -51,12 +55,9 @@
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0",
     "update-browserslist-db": "^1.1.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
-  },
-  "dependencies": {
-    "@types/leaflet.markercluster": "^1.5.5",
-    "leaflet.markercluster": "^1.5.3"
   }
 }
