--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "bootstrap-icons": "^1.11.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint": "^9.18.0",
+    "eslint": "^9.25.1",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "leaflet": "^1.9.4",
@@ -51,13 +51,14 @@
     "popper.js": "^1.16.1",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.3",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
+    "semver": "^7.7.1",
     "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0",
-    "update-browserslist-db": "^1.1.2",
+    "typescript-eslint": "^8.31.1",
+    "update-browserslist-db": "latest",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
